# fabric_ceph

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
fabric_ceph/: __main__.py  config.yml  openapi.yml
fabric_ceph/common/: config.py
fabric_ceph/external_api/: core_api.py
fabric_ceph/openapi_server/controllers/: ceph_fs_controller.py  cluster_info_controller.py  cluster_user_controller.py  s3_bucket_controller.py  s3_policy_controller.py  s3_user_controller.py  security_controller.py  version_controller.py
fabric_ceph/response/: ceph_fs_controller.py  cluster_info_controller.py  cluster_user_controller.py  cluster_user_helper.py  cors_response.py  s3_bucket_controller.py  s3_policy_controller.py  s3_user_controller.py  serialization.py  utils.py
fabric_ceph/security/: token_validator.py
fabric_ceph/utils/: ceph_fs_helper.py  cluster_helper.py  cluster_user_helper.py  create_ceph_user.py  dash_client.py  delete_ceph_user.py  export_ceph_user.py  keyring_parser.py  rgw_admin.py  ssh_runner.py  update_ceph_user.py  utils.py
fabric_ceph_client/: pyproject.toml
fabric_ceph_client/fabric_ceph_client/: ceph_fs_mount_bundle.py  fabric_ceph_client.py
nginx/: default.conf
tools/: Ceph_Manager_Operator.ipynb  add_users_to_project.py  ceph_client_api_examples.ipynb  ceph_subvol_gui.py  check_solo_storage_users.py  core_api.py  delete_solo_storage_volumes.py  extract_active_users.py  list_provisioned_volumes.py  operator.ipynb  remove_solo_storage_users.py  requirements.txt
(+51 files in other folders)
