[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "fabric_ceph"
authors = [{name="Komal Thareja", email="kthare10@renci.org"}]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE*"]
classifiers = ["Programming Language :: Python :: 3",
               "Operating System :: OS Independent"]
description = "Fabric Ceph Service"
dynamic = ["version"]

keywords = ["Swagger", "Fabric  Ceph Service"]

requires-python = '>=3.9'
dependencies = [
    "connexion[flask]==2.14.2",
    "swagger-ui-bundle==0.0.9",
    "python-dateutil>=2.8.2",
    "waitress",
    "fabric_fss_utils>=1.6.0",
    "fabric_credmgr_client>=1.6.2",
    "paramiko",
    ]

[project.optional-dependencies]
test = [
    "pytest~=7.1.0",
    "pytest-cov>=2.8.1",
    "pytest-randomly>=1.2.3",
    "Flask-Testing==0.8.1",
        ]

[project.urls]
Home = "https://fabric-testbed.net/"
Sources = "https://github.com/fabric-testbed/fabric_ceph"

[tool.flit.module]
name = "fabric_ceph"
